# web_scrapper

./: .gitignore  LICENSE  README.md  compose.yaml
api_backend/: Dockerfile  README.md  pyproject.toml
api_backend/api_backend/: __init__.py  __main__.py  actions.py  app.py  broker.py  config.py  database.py  logger.py  main.py  models.py
configs/postgres/: Dockerfile  psql_dump.sql
configs/rabbitmq/: Dockerfile  README.md
configs/rabbitmq/conf/: definitions.json
configs/rabbitmq/scripts/: generate_pass.py  init.sh
extractor/: Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
extractor/src/: app.rs  broker.rs  config.rs  database.rs  extractor.rs  handlers.rs  main.rs  models.rs
proxy_manager/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum
proxy_manager/cmd/api/: api.go  main.go  server.go
proxy_manager/cmd/app/: main.go
proxy_manager/internal/conf/: conf.go
proxy_manager/internal/config/: config.go
proxy_manager/internal/proxy/: proxy.go  requests.go
proxy_manager/internal/routines/: check.go  get.go  routine.go
proxy_manager/internal/scheduler/: scheduler.go
proxy_manager/mock/: proxy.js
proxy_manager/pkg/broker/: redis.go
proxy_manager/pkg/models/: identity.go  proxy.go  resource.go  task.go
proxy_manager/pkg/req/: requests.go
proxy_manager/pkg/store/: redis.go
scheduler/: README.md  pyproject.toml
scheduler/scheduler/: __main__.py  actions.py  app.py  broker.py  config.py  database.py  models.py  routines.py
scheduler/scheduler/app/: app.py  handlers.py  routes.py
scheduler/scheduler/libs/rabbitmq/: __init__.py  models.py
scrapper/: .dockerignore  Cargo.toml  Dockerfile  Makefile
scrapper/src/: config.rs  handlers.rs  main.rs  models.rs  rabbit.rs  requests.rs
