[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
json_env_logger = "0.1"
skyscraper = "0.5.0"
