[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envconfig = "0.10.0"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
json_env_logger = "0.1"
skyscraper = "0.5.0"
tokio = { versoin = "1.32.0", features = ["full"] }
lapin = "2.3.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
futures-lite = "1.13.0"
# async-global-executor = { version = "2.3.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"