[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Vadim Gorbachev <vadim.gorbachev.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
uvloop = "^0.17.0"
pika = "^1.3.2"
schedule = "^1.2.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
loguru = "^0.7.1"
orjson = "^3.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
