[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
amqprs = { version = "1.4.1", features = ["tokio-rustls"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11.20"
futures = "0.3.28"
envconfig = "0.10.0"
dotenv = "0.15.0"
