[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
lapin = "2.3.1"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
json_env_logger = "0.1"
reqwest = "0.11.20"
futures = "0.3.28"
futures-lite = "1.13.0"
envconfig = "0.10.0"
dotenv = "0.15.0"
chrono = "0.4.31"
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
